style.css
* {
    box-sizing: border-box;
}

body {
    font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, Sans-Serif;
    padding: 0px;
    margin: 1em;
    margin-left: 20vw;
    margin-right: 20vw;
    color: #110122;
    background-color: #FBF9F9;
    overflow-x: hidden;
}
header {
    display: flex;
    align-items: center;
}
header img {
    height: 5em;
    background-color: #FBF9F9;
    border-radius: 100%;
    margin-right: 1em;
}
header h1 {
    margin: 0px;
}

#stati {
    margin: 1em;
    display: flex;
    flex-direction: column;
}

.status .head {
    display: flex;
    align-items: center;
}

.partially-down .status-display {
    color: #e2b155;
}

.operational .status-display {
    color: #8cc473;
}

.down .status-display {
    color: #da4045;
}

.not-online .status-display {
    color: #4f4e55;
}

.in-maintenance .status-display {
    color: #4e8a82;
}



.test-body.operational .status-display {
    color: #8cc473;
}

.test-body.outage .status-display {
    color: #da4045;
}

.test-body.partial-outage .status-display {
    color: #e2b155;
}

.test-body.not-online .status-display {
    color: #4f4e55;
}

.test-body.in-maintenance .status-display {
    color: #4e8a82;
}

#filter-list {
    list-style-type: none;
    margin-bottom: 0;
    padding: 0;
    display: flex;
    flex-wrap: wrap;
}

#filter-heading {
    display: none;
}

#filter-list li {
    align-items: center;
    padding: 0.75em;
    height: 2em;
    margin-right: 0.25em;
    width: max-content;
    display: -ms-inline-flexbox;
    display: inline-flex;
    background: #dbdadd;
    border-radius: 1em;
}

#filter-list li h5 {
    display: inline-block;
    font-size: inherit;
    margin: 0;
}

#filter-list li button {
    padding: 0px;
    font-weight: bold;
    border: none;
    background: none;
    margin-left: 0.25em;
    cursor: pointer;
}

#add-filter {
    margin-left: auto;
    background: none;
    display: block;
    font-size: 1rem;
    text-align: right;
}

#filter-search-input {
    display: inline-block;
    border: 1px solid #9d9d9d;
    padding: 0.75em;
    height: 2em;
    border-radius: 1em;
    width: 0px;
    opacity: 0;
    transition: width 0.2s, opacity 0.125s;
}

#filter-search-input:focus,
#filter-search-input:valid {
    width: 15em;
    opacity: 1;
}

#add-filter .icon {
    cursor: pointer;
}

svg.icon {
    height: 1.25em;
}

#stati h3 {
    font-weight: normal;
}

.status {
    background: #FBF9F9;
    padding: 0.5em;
    border-radius: 1em;
    margin-top: 1em;
    box-shadow: 0.25em 0.25em 0.5em 0 #d5d4d4,
                -0.25em -0.25em 0.5em 0 #fff;
}

.status ul {
    list-style-type: none;
    display: flex;
    padding: 0;
    margin: 0;
    height: 100%;
    overflow: hidden;
    border-radius: 0.25em;
    position: relative;
    border-radius: 0.25em;
}

.status .graph-parent ul::before {
    position: absolute;
    z-index: 1;
    pointer-events: none;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    content: "";
}

.status .graph-parent li {
    display: inline-block;
    height: 100%;
    flex-grow: 1;
    position: relative;
    transition: all 0.1s;
}

.status .graph-parent li:hover {
    z-index: 2;
    box-shadow: 0.25em 0.25em 0.5em 0 #5553,
                -0.25em -0.25em 0.5em 0 #fff3;
    border-radius: 0.5em;
}

.info-button {
    width: 1.125em;
    height: 1.125em;
    border-radius: 0.75em;
    margin: 0.25em;
    border: none;
    padding: 0;
    background: #4d4c4e;
    text-align: center;
    justify-content: center;
    align-items: center;
    color: #fcfcfc;
    font-weight: bold;
    display: -ms-inline-flexbox;
    display: inline-flex;
    position: relative;
    cursor: pointer;
}

.info-button::before {
    content: "i";
}

.info-modal {
    display: none;
    position: absolute;
    background: #FBF9F9;
    color: #110122;
    font-weight: normal;
    font-size: 1rem;
    text-align: left;
    top: 1em;
    left: 1em;
    z-index: 3;
    padding: 0.5em;
    cursor: auto;
    overflow: hidden;
}

.info-modal h4 {
    margin: 0;
    margin-bottom: 0.125em;
    font-size: 1.125em;
    font-weight: normal;
    width: max-content;
}

#current-modal.info-modal {
    display: block;
    box-shadow: #403f4150 0px 0px 4px 0px;
    
}

.info-modal dl {
    margin: 0;
    width: max-content;
    line-height: 1.5em;
}

.info-modal dt {
    float: left;
    clear: left;
    display: block;
}

.info-modal dt::after {
    content: ":\a0";
}

.info-modal dd {
    margin: 0;
    text-align: left;
    float: left;
    display: block;
}

.info-modal ol {
    list-style-type: none;
    padding: 0;
    margin: 0;
}

.info-modal li {
    display: list-item;
}

dl:after {content:"";display:table;clear:both;}

.graph-parent {
    transition: 0.2s height;
    height: 2em;
}

.graph-group .graph-parent {
    margin-bottom: 0.5em;
}

.graph-group .graph-parent:last-child {
    margin-bottom: 0;
}

.graph-parent.has-placeholder {
    height: 1.5em;
}

.graph-parent.has-ping-graph {
    height: 3em;
}

.graph-parent.has-fine-uptime {
    height: 2em;
}

.graph-parent:empty {
    height: 1em;
}

.graph-parent svg {
    width: 100%;
    height: 100%;
    margin: 3px;
    color: #8cc473;
}

.graph-parent svg path {
    fill: transparent;
    stroke: #110122;
    stroke-width: 1px;
}

svg text {
    fill: #110122;
    background: #fff;
}

.graph-skeleton {
    height: 100%;
    border-radius: 0.25em;
    background: linear-gradient(-45deg, #dbdadd, #e7e6e6);
    animation: bgshift 2s infinite;
}

.graph-parent svg path.hor-line {
    stroke: #9d9d9d;
    stroke-width: 0.25px;
}

#announce {
    line-height: 1.5em;
    margin: 1em;
}

#announce blockquote sup {
display: none;
}

.test-body h4 {
    font-weight: normal;
    margin-bottom: 2px;
}

.test-body:nth-child(2) h4 {
    margin-top: 2px;
}

.tooltip-float {
    position: absolute;
    background: #FBF9F9;
    padding: 0.1em 0.325em;
    border-radius: 0.25em;
    top: 0.25em;
    bottom: 0.25em;
    display: flex;
    align-items: center;
    align-content: center;
    z-index: 3;
    pointer-events: none;
}

.test-body {
    margin-left: 1.5em;
    margin-right: 1.5em;
}

.placeholder {
    height: 100%;
}

.not-online .placeholder {
    background-color: #e7e6e6;
    background: linear-gradient(-45deg, #dbdadd, #f1f1f1);
}

.in-maintenance.placeholder {
    background-color: #a6e0e4;
}

#load-parent {
    position: fixed;
    width: 100vw;
    height: 100vh;
    display: flex;
    align-items: center;
    justify-content: center;
    top: 0px;
    left: 0px;
    background-color: #FBF9F9; 
    flex-direction: column;
}

@keyframes bgshift {
    from {
        background-position-x: 0px 0vw;
    }
    to {
        background-position: 0px 20vw;
    }
} 


@media only screen and (max-width: 600px) {
    body {
        margin: 1em;
    }

    .info-modal {
        position: fixed;
        top: 55vh;
        left: 0;
        right: 0;
        width: 100vw;
        height: 45vh;
        overflow-y: auto;
    }
}


/*
CSS Loader (from loading.io
*/

.lds-dual-ring {
    display: inline-block;
    width: 80px;
    height: 80px;
  }
  .lds-dual-ring:after {
    content: " ";
    display: block;
    width: 64px;
    height: 64px;
    margin: 8px;
    border-radius: 50%;
    border: 6px solid #110122;
    border-color: #110122 transparent #110122 transparent;
    animation: lds-dual-ring 1.2s linear infinite;
  }
  @keyframes lds-dual-ring {
    0% {
      transform: rotate(0deg);
    }
    100% {
      transform: rotate(360deg);
    }
  }
  

